fix:footer alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -345,11 +345,13 @@ div .social-media{
   padding-left:1vw;
   padding-right:1vw;
   padding-bottom:1vh;
-  box-shadow:1px 1px 1px #000405;
+  box-shadow:0 0 2px #000405;
 }
 /*image box*/
 .img-1{
   background-color:#232429;
+  padding: 1vw 1vw 1vw;
+  margin:1vw 1vw 1vw;
   width:50vw;
   height:auto; 
 }
@@ -366,7 +368,7 @@ div .social-media{
   padding-right:1vw;
   padding-bottom:1vh;
   color:#ffffff;
-  box-shadow:1px 1px 1px#000405;
+  box-shadow:0 0 2px#000405;
 }
 
 /*macro image box*/
@@ -379,7 +381,8 @@ div .social-media{
 
 /*macros image*/
 div .keto-macros{
-  background-color:#232429;
+  padding: 1vw 1vw 1vw;
+  margin: 1vw 1vw 1vw;
   width:50vw;
   height:auto;
 }
@@ -396,10 +399,8 @@ footer{
   width:100%;
   height:30vh;
   padding:2vh 2vw;
-  display:flex;
-  flex-direction:row;
-  justify-content:space-evenly;
-  flex-wrap:wrap;
+  display:grid;
+  grid-template-columns: 6fr 1fr 1fr;
 }
 
 div .social-media{ 
